--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,29 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <distributionManagement>
+
+    <repository>
+
+        <id>nexus</id>
+
+        <name>gitone_releases</name>
+
+        <url>http://34.77.216.90:8081/repository/bhupinder-demo/</url>
+
+    </repository>
+
+    <snapshotRepository>
+
+        <id>nexus</id>
+
+        <name>gitone_snapshots</name>
+
+        <url>http://34.77.216.90:8081/repository/bhupinder-demo/</url>
+
+    </snapshotRepository>
+
+</distributionManagement>
         <plugins>
                        <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
