--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0          http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>ci.jenkins.aws</groupId>
-    <artifactId>proj3</artifactId>
-    <version>1.0-RAMA</version>
-    <packaging>pom</packaging>
-    <name>Project Build</name>
-
-    <modules>
-        <module>project</module>
-    </modules>
+    <groupId>artifactory</groupId>
+    <artifactId>test</artifactId>
+    <version>0.0.1</version>
+    <name>artifactory-test</name>
+    <!-- <packaging>pom</packaging> -->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-   <dependencies>
+    <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -26,7 +22,7 @@
     <build>
         <pluginManagement>
             <plugins>
-                              <plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
                     <version>2.4</version>
@@ -38,25 +34,12 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-        
-        <plugins>
-                       <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <addMavenDescriptor>false</addMavenDescriptor>
-                    </archive>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
-<distributionManagement>
-    <repository>
-        <id>nexus</id>
-        <name>gitone_releases</name>
-        <url>http://34.77.216.90:8081/repository/bhupinder-demo/</url>
-    </repository>
-</distributionManagement>
-    
+    <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <name>gitone_releases</name>
+            <url>http://34.77.216.90:8081/repository/bhupinder-demo/</url>
+        </repository>
+    </distributionManagement>
 </project>
