--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>test</artifactId>
     <version>0.0.1</version>
     <name>artifactory-test</name>
-    <!-- <packaging>pom</packaging> -->
+    <packaging>war</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
